fix: better readable headlines
I am aware that it might be a statement, but in it's current font-weight the headlines are hardly readable. 500 is a better value. Just close if that was intended ;)

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body {
 h1, h2 {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   margin-left: -1%;
+  font-weight: 500;
 }
 
 p {
